Them bang check ID trung

--- a/Form.html
+++ b/Form.html
@@ -164,3 +164,15 @@
 	</script>
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Check ID</title>
+</head>
+<body>
+    <h1>Check ID</h1>
+    <form action="" method="post">
+        <label for="id">ID:</label>
+        <input type="text" id="id" name="id">
+        <input type="submit" name="submit" value="Check">
+    </form>
