--- a/BTTH01/Student.html
+++ b/BTTH01/Student.html
@@ -73,7 +73,7 @@
 </head>
 <body>
 	<form method="POST">
-		<h3>Thêm Sinh viên mới</h3>
+		<h3>Add Student</h3>
 		<p>
 			<label for="name">Name:</label>
 			<input type="text" id="name" name="name" required>
@@ -90,7 +90,7 @@
 	</form>
 
 	<form method="POST">
-		<h3>Sửa thông tin Sinh viên</h3>
+		<h3>Edit Student</h3>
 		<p>
 			<label for="old_email">Old Id:</label>
 			<input type="email" id="old_email" name="old_email" required>
@@ -111,7 +111,7 @@
 	</form>
 
 	<form method="POST">
-		<h3>Xóa Sinh viên</h3>
+		<h3>Delete Student</h3>
 		<p>
 			<label for="id">ID:</label>
 			<input type="number" id="id" name="id" required>
