--- a/BTTH01/Student.html
+++ b/BTTH01/Student.html
@@ -87,37 +87,10 @@
 			<input type="nummber" id="id" name="id" required>
 		</p>
 		<input type="submit" name="add" value="Add">
-	</form>
-
-	<form method="POST">
-		<h3>Edit Student</h3>
-		<p>
-			<label for="old_email">Old Id:</label>
-			<input type="email" id="old_email" name="old_email" required>
-		</p>
-		<p>
-			<label for="name">New Name:</label>
-			<input type="text" id="name" name="name" required>
-		</p>
-		<p>
-			<label for="age">New Age:</label>
-			<input type="number" id="age" name="age" required>
-		</p>
-		<p>
-			<label for="id">New ID:</label>
-			<input type="id" id="email" name="email" required>
-		</p>
 		<input type="submit" name="edit" value="Edit">
+		<input type="submit" name="age" value="Age">
 	</form>
 
-	<form method="POST">
-		<h3>Delete Student</h3>
-		<p>
-			<label for="id">ID:</label>
-			<input type="number" id="id" name="id" required>
-		</p>
-		<input type="submit" name="delete" value="Delete">
-	</form>
 	<?php
 	// đọc dữ liệu từ tệp student.txt
 	$file = fopen("student.txt", "r");
