--- a/BTTH01/Student.html
+++ b/BTTH01/Student.html
@@ -88,7 +88,7 @@
 		</p>
 		<input type="submit" name="add" value="Add">
 		<input type="submit" name="edit" value="Edit">
-		<input type="submit" name="age" value="Age">
+		<input type="submit" name="age" value="Delete">
 	</form>
 
 	<?php
