thêm mã ký tự utf-8 vào trang HTML

--- a/Form.html
+++ b/Form.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Thêm sinh viên mới</title>
 	<style>
 		body {
@@ -118,7 +119,7 @@
 		</p>
 		<input type="submit" name="delete" value="Delete">
 	</form>	
-		
+
 	<script>
 		// kiểm tra xem có thông báo thành công hay không
 		var successMsg = document.getElementById("success");
