--- a/BTTH01/Student.html
+++ b/BTTH01/Student.html
@@ -73,7 +73,7 @@
 </head>
 <body>
 	<form method="POST">
-		<h3>Add Student</h3>
+		<h3> Student</h3>
 		<p>
 			<label for="name">Name:</label>
 			<input type="text" id="name" name="name" required>
@@ -88,7 +88,7 @@
 		</p>
 		<input type="submit" name="add" value="Add">
 		<input type="submit" name="edit" value="Edit">
-		<input type="submit" name="age" value="Delete">
+		<input type="submit" name="delete" value="Delete">
 	</form>
 
 	<?php
